Updated link in blog

--- a/index.html
+++ b/index.html
@@ -49,24 +49,24 @@
             <h2>Blog</h2>
             <div class="row">
                 <div class="col-md-4">
-                    <a href="newpage.html"><img class="link-pic" src="pics/background.jpg" alt="dragon" title="I really like this dragon!!"></a>
+                    <a href="https://euw.leagueoflegends.com/en/page/champion-reveal-aurelion-sol-star-forger"><img class="link-pic" src="pics/background.jpg" alt="dragon" title="I really like this dragon!!"></a>
                 </div>
                 <div class="col-md-4">
-                    <a href="newpage.html"><img class="link-pic" src="pics/background.jpg" alt="dragon" title="I really like this dragon!!"></a>
+                    <a href="https://euw.leagueoflegends.com/en/page/champion-reveal-aurelion-sol-star-forger"><img class="link-pic" src="pics/background.jpg" alt="dragon" title="I really like this dragon!!"></a>
                 </div>
                 <div class="col-md-4">
-                    <a href="newpage.html"><img class="link-pic" src="pics/background.jpg" alt="dragon" title="I really like this dragon!!"></a>
+                    <a href="https://euw.leagueoflegends.com/en/page/champion-reveal-aurelion-sol-star-forger"><img class="link-pic" src="pics/background.jpg" alt="dragon" title="I really like this dragon!!"></a>
                 </div>
             </div><br>
             <div class="row">
                 <div class="col-md-4">
-                    <a href="newpage.html"><img class="link-pic" src="pics/background.jpg" alt="dragon" title="I really like this dragon!!"></a>
+                    <a href="https://euw.leagueoflegends.com/en/page/champion-reveal-aurelion-sol-star-forger"><img class="link-pic" src="pics/background.jpg" alt="dragon" title="I really like this dragon!!"></a>
                 </div>
                 <div class="col-md-4">
-                    <a href="newpage.html"><img class="link-pic" src="pics/background.jpg" alt="dragon" title="I really like this dragon!!"></a>
+                    <a href="https://euw.leagueoflegends.com/en/page/champion-reveal-aurelion-sol-star-forger"><img class="link-pic" src="pics/background.jpg" alt="dragon" title="I really like this dragon!!"></a>
                 </div>
                 <div class="col-md-4">
-                    <a href="newpage.html"><img class="link-pic" src="pics/background.jpg" alt="dragon" title="I really like this dragon!!"></a>
+                    <a href="https://euw.leagueoflegends.com/en/page/champion-reveal-aurelion-sol-star-forger"><img class="link-pic" src="pics/background.jpg" alt="dragon" title="I really like this dragon!!"></a>
                 </div>
             </div>
         </section>
